# preproof

./: .env.example  .gitignore  Dockerfile  README.md  app.py  chunking_processor.py  editing_processor.py  llm_processor.py  merging_processor.py  pyproject.toml  text_processor.py
