[tool.poetry]
name = "preproof"
version = "0.1.0"
description = "Streamlit app for audio transcription proofreading and editing"
authors = ["Your Name <your.email@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"